// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DFI address control should match snapshot for Address Control Card 1`] = `null`;

exports[`DFI address control should match snapshot for Address Control Modal 1`] = `
<View
  style={
    Object {
      "paddingBottom": 64,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 2,
        },
        Object {
          "borderBottomColor": "rgba(245, 245, 245, 1)",
          "borderLeftColor": "rgba(245, 245, 245, 1)",
          "borderRightColor": "rgba(245, 245, 245, 1)",
          "borderTopColor": "rgba(245, 245, 245, 1)",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontFamily": "MediumFont",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "lineHeight": 28,
                  "marginLeft": 8,
                  "marginRight": 8,
                },
                Object {
                  "color": "rgba(23, 23, 23, 1)",
                },
              ],
            ]
          }
        >
          Switch to another address
        </Text>
        <View
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="discover_wallet_addresses"
        >
          <Text />
        </View>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Text />
      </View>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": 32,
      }
    }
    style={
      Array [
        undefined,
        Object {
          "color": "rgba(23, 23, 23, 1)",
        },
      ]
    }
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`DFI address control should match snapshot for Address Control Screen 1`] = `
<RCTScrollView
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "rgba(250, 250, 250, 1)",
      },
    ]
  }
>
  <View>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Object {
              "color": "rgba(115, 115, 115, 1)",
              "fontFamily": "MediumFont",
              "fontSize": 12,
              "fontWeight": "500",
              "lineHeight": 16,
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 24,
            },
            Object {
              "backgroundColor": "rgba(250, 250, 250, 1)",
              "color": "rgba(115, 115, 115, 1)",
            },
          ],
        ]
      }
      testID="switch_address_screen_title"
      text="Switch to another address"
    >
      Switch to another address
    </Text>
  </View>
</RCTScrollView>
`;

exports[`DFI address control should match snapshot for Address Item Row 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "borderBottomColor": "rgba(245, 245, 245, 1)",
      "borderBottomWidth": 1,
      "borderLeftColor": "rgba(245, 245, 245, 1)",
      "borderRightColor": "rgba(245, 245, 245, 1)",
      "borderTopColor": "rgba(245, 245, 245, 1)",
      "opacity": 1,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 8,
      "paddingTop": 16,
    }
  }
  testID="address_row_0"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": 12,
        }
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "width": "100%",
              },
              Object {
                "color": "rgba(23, 23, 23, 1)",
              },
            ],
          ]
        }
        testID="address_row_text_0"
      >
        bcrt1q8rfsfny80jx78cmk4rsa069e2ckp6rn83u6ut9
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "marginLeft": 4,
          },
          Object {
            "backgroundColor": "rgba(239, 246, 253, 1)",
          },
        ]
      }
      testID="address_active_indicator_bcrt1q8rfsfny80jx78cmk4rsa069e2ckp6rn83u6ut9"
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "MediumFont",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "paddingLeft": 4,
                "paddingRight": 4,
              },
              Object {
                "color": "rgba(90, 169, 230, 1)",
              },
            ],
          ]
        }
      >
        ACTIVE
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginLeft": 12,
        }
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 24,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(23, 23, 23, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
